[gd_scene load_steps=11 format=2]

[ext_resource path="res://fonts/Gingerbread-ExEW.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://ui/Options.tscn" type="PackedScene" id=3]
[ext_resource path="res://music/poker_night.ogg" type="AudioStream" id=4]
[ext_resource path="res://PauseMenu.gd" type="Script" id=5]

[sub_resource type="InputEventAction" id=2]
action = "ui_cancel"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=4]
action = "ui_cancel"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="GameHolder" type="Node" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Music"

[node name="MenuHolder" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 5 )

[node name="HiddenEscButton" type="Button" parent="MenuHolder"]
margin_left = -312.0
margin_top = -208.0
margin_right = -192.0
margin_bottom = -164.0
shortcut = SubResource( 3 )

[node name="MessageCanvas" type="CanvasLayer" parent="MenuHolder"]

[node name="Message" type="Label" parent="MenuHolder/MessageCanvas"]
visible = false
anchor_left = 0.5
anchor_top = 0.427
anchor_right = 0.5
anchor_bottom = 0.427
margin_left = -120.0
margin_top = -19.2
margin_right = 125.0
margin_bottom = 19.8
text = "Game Over"
align = 1
valign = 1

[node name="RetryMenu" type="CanvasLayer" parent="MenuHolder"]
pause_mode = 1
visible = false

[node name="GridContainer" type="GridContainer" parent="MenuHolder/RetryMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -127.0
margin_top = -18.0
margin_right = 127.0
margin_bottom = 74.0

[node name="NextLevelButton" type="Button" parent="MenuHolder/RetryMenu/GridContainer"]
margin_right = 254.0
margin_bottom = 44.0
disabled = true
text = "Next Level"

[node name="RetryButton" type="Button" parent="MenuHolder/RetryMenu/GridContainer"]
margin_top = 48.0
margin_right = 254.0
margin_bottom = 92.0
text = "Retry"

[node name="MainMenu" type="CanvasLayer" parent="MenuHolder"]

[node name="ColorRect" type="ColorRect" parent="MenuHolder/MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.588235, 0.133333, 0.133333, 1 )

[node name="Title" type="Label" parent="MenuHolder/MainMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -216.0
margin_top = 72.0
margin_right = 214.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 1 )
text = "BreadBread"

[node name="MainMenuGrid" type="GridContainer" parent="MenuHolder/MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -107.0
margin_top = -21.0
margin_right = 107.0
margin_bottom = 21.0

[node name="ResumeGameButton" type="Button" parent="MenuHolder/MainMenu/MainMenuGrid"]
visible = false
margin_right = 228.0
margin_bottom = 44.0
shortcut_in_tooltip = false
shortcut = SubResource( 5 )
text = "Resume"

[node name="NewGameButton" type="Button" parent="MenuHolder/MainMenu/MainMenuGrid"]
margin_right = 228.0
margin_bottom = 44.0
text = "New Game"

[node name="LevelSelectButton" type="Button" parent="MenuHolder/MainMenu/MainMenuGrid"]
margin_top = 48.0
margin_right = 228.0
margin_bottom = 92.0
disabled = true
text = "???"

[node name="OptionsButton" type="Button" parent="MenuHolder/MainMenu/MainMenuGrid"]
margin_top = 96.0
margin_right = 228.0
margin_bottom = 140.0
text = "Options"

[node name="CreditsButton" type="Button" parent="MenuHolder/MainMenu/MainMenuGrid"]
margin_top = 144.0
margin_right = 228.0
margin_bottom = 188.0
text = "Credits"

[node name="LevelSplashGrid" type="GridContainer" parent="MenuHolder/MainMenu"]
margin_right = 40.0
margin_bottom = 40.0

[node name="OptionsMenu" parent="MenuHolder" instance=ExtResource( 3 )]
visible = false

[connection signal="pressed" from="MenuHolder/HiddenEscButton" to="MenuHolder" method="_on_HiddenEscButton_pressed"]
[connection signal="pressed" from="MenuHolder/RetryMenu/GridContainer/NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
[connection signal="pressed" from="MenuHolder/RetryMenu/GridContainer/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="MenuHolder/MainMenu/MainMenuGrid/ResumeGameButton" to="MenuHolder" method="_on_ResumeGameButton_pressed"]
[connection signal="pressed" from="MenuHolder/MainMenu/MainMenuGrid/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="MenuHolder/MainMenu/MainMenuGrid/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="music_volume_changed" from="MenuHolder/OptionsMenu" to="." method="_on_OptionsMenu_music_volume_changed"]
[connection signal="options_back" from="MenuHolder/OptionsMenu" to="." method="_on_OptionsMenu_options_back"]
[connection signal="sound_volume_changed" from="MenuHolder/OptionsMenu" to="." method="_on_OptionsMenu_sound_volume_changed"]
